[project]
name = "bloggeneration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langchain-cli[inmem]>=0.0.37",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.0.1",
    "langgraph>=1.0.3",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]
